overflow issue solved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-* > *{
-  font-family: 'Poppins', sans-serif;
+* > * {
+  font-family: "Poppins", sans-serif;
 }
 
 * {
@@ -17,7 +17,6 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
